[package]
name = "golf"
version = "0.1.0"
authors = ["tmck"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "~0.8.1" } #, default-features = false, features = ["curses"] }
legion = "=0.3.1"
bevy_ecs = "0.4.0"
itertools-num = "0.1.3"
